// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - circleSize - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "circleSize": 50,
      "circleSpacing": 14,
      "color": "#000000",
      "colors": undefined,
      "id": "circleSize_input",
      "onChangeComplete": [Function],
      "width": "100%",
    },
    Object {},
  ],
]
`;

exports[`Mock render - circleSpacing - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "circleSize": 28,
      "circleSpacing": 1,
      "color": "#000000",
      "colors": undefined,
      "id": "circleSpacing_input",
      "onChangeComplete": [Function],
      "width": "100%",
    },
    Object {},
  ],
]
`;

exports[`Mock render - colors - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "circleSize": 28,
      "circleSpacing": 14,
      "color": "#000000",
      "colors": Array [
        "#123456",
        "#abc345",
      ],
      "id": "colors_input",
      "onChangeComplete": [Function],
      "width": "100%",
    },
    Object {},
  ],
]
`;

exports[`Mock render - default - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "circleSize": 28,
      "circleSpacing": 14,
      "color": "#000000",
      "colors": undefined,
      "id": "default_input",
      "onChangeComplete": [Function],
      "width": "100%",
    },
    Object {},
  ],
]
`;

exports[`Mock render - defaultColor - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "circleSize": 28,
      "circleSpacing": 14,
      "color": "#FF0000",
      "colors": undefined,
      "id": "defaultColor_input",
      "onChangeComplete": [Function],
      "width": "100%",
    },
    Object {},
  ],
]
`;

exports[`Mock render - inputStyle - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "circleSize": 28,
      "circleSpacing": 14,
      "color": "#000000",
      "colors": undefined,
      "id": "inputStyle_input",
      "onChangeComplete": [Function],
      "width": "100%",
    },
    Object {},
  ],
]
`;

exports[`Mock render - label-disabled - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "circleSize": 28,
      "circleSpacing": 14,
      "color": "#000000",
      "colors": undefined,
      "id": "label-disabled_input",
      "onChangeComplete": [Function],
      "width": "100%",
    },
    Object {},
  ],
]
`;

exports[`Mock render - showValue - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "circleSize": 28,
      "circleSpacing": 14,
      "color": "#000000",
      "colors": undefined,
      "id": "showValue_input",
      "onChangeComplete": [Function],
      "width": "100%",
    },
    Object {},
  ],
]
`;

exports[`Mock render - showValue, value - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "circleSize": 28,
      "circleSpacing": 14,
      "color": "#000000",
      "colors": undefined,
      "id": "showValue, value_input",
      "onChangeComplete": [Function],
      "width": "100%",
    },
    Object {},
  ],
]
`;

exports[`Mock render - title - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "circleSize": 28,
      "circleSpacing": 14,
      "color": "#000000",
      "colors": undefined,
      "id": "title_input",
      "onChangeComplete": [Function],
      "width": "100%",
    },
    Object {},
  ],
]
`;

exports[`Mock render - valueStyle - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "circleSize": 28,
      "circleSpacing": 14,
      "color": "#000000",
      "colors": undefined,
      "id": "valueStyle_input",
      "onChangeComplete": [Function],
      "width": "100%",
    },
    Object {},
  ],
]
`;

exports[`Mock render - width - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "circleSize": 28,
      "circleSpacing": 14,
      "color": "#000000",
      "colors": undefined,
      "id": "width_input",
      "onChangeComplete": [Function],
      "width": 200,
    },
    Object {},
  ],
]
`;
